--- a/main.css
+++ b/main.css
@@ -1,5 +1,13 @@
+#new_am {
+    width:25%;
+    border: none;
+
+}
+
+
 #contain {
-    display: inline-block;
+    display:block;
+    font-family: 'Roboto', sans-serif;
 
    
 }
@@ -17,3 +25,4 @@
 #button2 {
     background-color: darkgrey;
 }
+
